# Estudio

./: README.md
(1) Primer programa/: CMakeLists.txt  main1.cpp  main2.cpp
(11) Condicionales simples y dobles/: CMakeLists.txt  distinto.cpp  igualdad.cpp  mayor-igual.cpp  mayor.cpp  menor-igual.cpp
(12) Condicionales multiples/: CMakeLists.txt  main.cpp
(13-18) Condicionales/: CMakeLists.txt  ejercicio1.cpp  ejercicio10.cpp  ejercicio11.cpp  ejercicio2.cpp  ejercicio3.cpp  ejercicio4.cpp  ejercicio5.cpp  ejercicio6.cpp  ejercicio7.cpp  ejercicio8.cpp  ejercicio9.cpp
(19) Ciclos o bucles/: CMakeLists.txt  main.cpp
(2) Tipos de datos/: CMakeLists.txt  caracter.cpp  doble.cpp  entero.cpp  flotante.cpp  main.cpp
(20) Ciclos o bucles/: CMakeLists.txt  main.cpp
(21) Ciclos o bucles/: CMakeLists.txt  main.cpp
(22-29) Ciclos o bucles/: CMakeLists.txt  ejercicio1.cpp  ejercicio2.cpp  ejercicio3.cpp  ejercicio4.cpp  ejercicio5.cpp  ejercicio6.cpp  ejericicio7.cpp  main1.cpp  main2.cpp  main3.cpp  main4.cpp  main5.cpp  main6.cpp  main7.cpp  main8.cpp
(3) Lectura o entrada de datos/: CMakeLists.txt  main.cpp
(4) Operaciones aritméticas/: CMakeLists.txt  ejercicio.cpp  main.cpp
(5) Pedir datos y mostrarlos en pantalla/: CMakeLists.txt  ejercicio.cpp
(6) Expresiones/: CMakeLists.txt  ejercicio1.cpp  ejercicio4.cpp  ejercicio5.cpp  main1.cpp  main2.cpp  main3.cpp  main4.cpp
(6-10) Expresiones/: CMakeLists.txt  ejercicio2.cpp  ejercicio3.cpp  main5.cpp
(7)/: CMakeLists.txt  main.cpp
