cmake_minimum_required(VERSION 3.26)
project(_11_18__Condicionales)

set(CMAKE_CXX_STANDARD 14)

add_executable(igualdad igualdad.cpp)
add_executable(distinto distinto.cpp)
add_executable(mayor mayor.cpp)
add_executable(menor menor.cpp)
add_executable(mayor-igual mayor-igual.cpp)
add_executable(menor-igual menor-igual.cpp)

