cmake_minimum_required(VERSION 3.26)
project(_13_18__Condicionales)

set(CMAKE_CXX_STANDARD 14)

add_executable(ejercicicio1 ejercicio1.cpp)
add_executable(ejercicicio2 ejercicio2.cpp)
add_executable(ejercicicio3 ejercicio3.cpp)
add_executable(ejercicicio4 ejercicio4.cpp)
add_executable(ejercicicio5 ejercicio5.cpp)
add_executable(ejercicicio6 ejercicio6.cpp)
add_executable(ejercicicio7 ejercicio7.cpp)
