cmake_minimum_required(VERSION 3.26)
project(_6__Expresiones)

set(CMAKE_CXX_STANDARD 14)

add_executable(main1 main1.cpp)
add_executable(ejercicio1 ejercicio1.cpp)

add_executable(main2 main2.cpp)
add_executable(ejercicio2 ejercicio2.cpp)

add_executable(main3 main3.cpp)
add_executable(ejercicio3 ejercicio3.cpp)

add_executable(main4 main4.cpp)
add_executable(ejercicio4 ejercicio4.cpp)

add_executable(main5 main5.cpp)
add_executable(ejercicio5 ejercicio5.cpp)